# backend

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEV_MODE_AUTH.md  Dockerfile  LICENSE  README.md  clear_init_files.py  entrypoint.sh  env.local  manage.py  open_food_facts_example.py  pyproject.railway.toml  pyproject.toml  railway.json  test.py  test_cancel.py
services/app/: .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  36a0092f0394_add_onboarding_data_to_recipes_catalog_.py  CONTINUATION_PROMPT.md  MEAL_PROTECTED_SETTER_MIGRATION_SUMMARY.md  PRD-API-Layer-Documentation.md  PRD_Test_Refactoring.md  README.md  alembic.ini  analysis_results_phase_0_1_1.json  check.py  cleanup_test_schema.py  conversion_patterns_phase_0_1_2.json  csv  debug_flaky_test.py  debug_macro_division_detailed.py  debug_macro_division_direct.py  debug_macro_division_internals.py  debug_macro_division_test.py  debug_none_detection.py  debug_nutrition_test.py  debug_pytest_environment.py  event.json  linter_validation_report.json  local_lambda_server.py  manage.py  phase_0_1_3_test_coverage_analysis.md  phase_0_analysis_api_schema_audit.md  phase_0_compliance_spreadsheet.csv  phase_0_performance_baseline.json  phase_3.md  phase_4.md  pyproject.toml  repository-tests-analysis.md  requirements.txt  test-docker-compose.yml  test_backward_compatibility.py  test_script.py  test_with_none_detection.py
services/app/._docs/: schema-patterns.md
services/app/._docs/architecture/: cold-start-test-results.md  common-confusion-points.md  cursor-ai-guide.md  decision-trees.md  documentation-feedback-loops.md  documentation-maintenance-checklist.md  documentation-maintenance-schedule.md  documentation-review-guidelines.md  documentation-versioning-strategy.md  feedback-collection-system.md  onboarding-simulation-scenarios.md  pattern-library.md  technical-specifications.md  troubleshooting-guide.md
services/app/._old_docs/api-layer/: implementation-guide.md  overview.md
services/app/._old_tasks/: api_update_meal_data_factories.py  assessment-api-endpoints-refactoring.md  assessment-typeform-api-improvements.md  feature-assessment-api-recipe-test-refactoring.md  feature-assessment-client-onboarding-tests.md  feature-assessment-typeform-client-onboarding.md  prd-api-create-recipe-testing.md  prd-api-recipe-test-refactoring.md  prd-api-schema-documentation-update.md  prd-api-schema-standardization.md  prd-client-onboarding-test-suite.md  prd-quality-report-api-create-recipe-testing.md  prd-quality-report-typeform-api-improvements.md  tasks-prd-api-schema-standardization.md
services/app/._old_tasks/api-create-recipe-testing/: guide.md  phase_2.md
services/app/._old_tasks/api-endpoints-refactoring/: phase_1.md  phase_2.md  phase_3.md  phase_4.md
services/app/._old_tasks/api-layer-documentation/: guide.md  phase_1.md  (+1 more)
services/app/.claude/: CLAUDE.md
services/app/.github/: link-check-config.json  pull_request_template.md
services/app/analysis/: current_test_structure_analysis.md  factory_dependencies.md  performance_test_bottlenecks.md
services/app/debug-env-templates/: README.md  env.debug-all  env.debug-query-steps  env.default  env.production
services/app/docs/: adr-enhanced-entity-patterns.md  endpoint_migration_checklist.md  lambda_helpers_usage.md  lambda_integration_patterns.md  lambda_migration_examples.md
services/app/migrations/: env.py
services/app/old_tasks/: prd-new.md  tasks-prd-improve-api-schemas.md
services/app/rabbitmq_consumers/: food_tracker.py  products_catalog.py  receipt_tracker.py
services/app/scripts/: analyze_api_patterns.py  analyze_conversion_patterns.py  check-coverage.sh  pre-commit-docs-style.sh  pre-commit-docs-validation.sh  run_local_lambda.sh  search_documentation.py  setenvs.sh  validate-docs.sh  verify_documented_schemas.py
services/app/src/: INIT_PRIVATE.json  INIT_TACO.json  backend_pre_start.py  main.py
services/app/tasks/: __prd-codebase-refactoring.md  __tasks-prd-refactor-repository.md  assessment-api-create-recipe-testing.md  assessment-api-layer-documentation.md  assessment-api-recipe-test-refactoring.md  assessment-client-onboarding-test-suite.md  assessment-test-file-refactoring.md  assessment-test-refactoring.md  assessment-typeform-client-onboarding.md  assessment-typeform-egress-proxy.md  feature-assessment-api-create-recipe-testing.md  feature-assessment-api-endpoints-refactoring.md  feature-assessment-typeform-api-improvements.md  feature-assessment-typeform-egress-proxy.md  integration-test-refactor-guide.md  next-session-prompt.md  prd-ai-agent-onboarding.md  prd-api-endpoints-refactoring.md  prd-api-schema-pattern-documentation.md  prd-codebase-refactoring.md  prd-domain-refactor-cache-root-aggregate.md  prd-improve-api-schemas.md  prd-pydantic-schema-refactor.md  prd-quality-report-typeform-egress-proxy.md  prd-typeform-api-improvements.md  prd-typeform-client-onboarding.md  prd-typeform-egress-proxy.md  repository-analysis-reference.md  task-quality-report-api-layer-documentation.md  task-quality-report-typeform-api-improvements.md  task-quality-report-typeform-egress-proxy.md  tasks-prd-ai-agent-onboarding.md  tasks-prd-api-schema-pattern-documentation.md  tasks-prd-codebase-refactoring.md  tasks-prd-domain-refactor-cache-root-aggregate.md  tasks-prd-pydantic-schema-refactor.md  tasks-prd-refactor-repository-remaining.md  tasks-prd-refactor-repository.md
services/app/tests/: baseline_performance_results.md  conftest.py  integration_conftest.py  performance_baseline_domain.py  performance_phase_4_1_cache_effectiveness.py  phase_4_1_performance_summary.md  test_enums.py  utils.py
services/app/tools/: schema_pattern_linter.py
services/notifications/: pyproject.toml
services/notifications/rabbitmq_consumers/: notifications.py
services/notifications/src/: config.py  logger.py
services/notifications/tests/: test_email.py
services/receipt_scrapers/: pyproject.toml
services/receipt_scrapers/rabbitmq_consumers/: receipt_scrapers.py
services/receipt_scrapers/src/: config.py  logger.py
(+4138 files in other folders)
