[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jalvespinto <jalvespinto@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.app.dependencies]
alembic = "^1.13.1"
attrs = "^23.2.0"
cattrs = "^23.2.3"
fastapi = "^0.111.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
python-multipart = "^0.0.9"
Unidecode = "^1.3.8"
asyncpg = "^0.29.0"
aio-pika = "^9.4.0"
yarl = "^1.9.4"
anyio = "^4.0.0"
colorlog = "^6.8.0"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
python-json-logger = "^2.0.7"
email-validator = "^2.2.0"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
wheel = "^0.42.0"
requests = "^2.31.0"
httpx = "^0.26.0"
pytest = "^8.1.1"
click = "^8.1.7"
fuzzywuzzy = "^0.18.0"
watchfiles = "^0.21.0"
fastapi-cli = "^0.0.4"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.lambda.dependencies]
dependency-injector = "^4.41.0"
attrs = "^23.2.0"
cattrs = "^23.2.3"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.9"
Unidecode = "^1.3.8"
asyncpg = "^0.29.0"
aio-pika = "^9.4.0"
yarl = "^1.9.4"
anyio = "^4.0.0"
colorlog = "^6.8.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.notifications.dependencies]
alembic = "^1.13.1"
aiosmtplib = "^3.0.1"
attrs = "^23.2.0"
cattrs = "^23.2.3"
tenacity = "^8.2.3"
python-json-logger = "^2.0.7"
aio-pika = "^9.4.0"
anyio = "^4.0.0"
colorlog = "^6.8.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.receipt_scrapers.dependencies]
attrs = "^23.2.0"
python-multipart = "^0.0.9"
Unidecode = "^1.3.8"
python-Levenshtein = "^0.23.0"
python-json-logger = "^2.0.7"
aio-pika = "^9.4.0"
anyio = "^4.0.0"
colorlog = "^6.8.0"
apscheduler = "^3.10.4"
pydantic-settings = "^2.1.0"
beautifulsoup4 = "^4.12.2"
anticaptchaofficial = "^1.0.58"
pyOpenSSL = "24.1.0"
selenium = "^4.15.2"
cryptography = "^41.0.5"
playwright = "^1.40.0"
pydantic = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "integration: integration tests",
  "e2e: end to end tests",
]
testpaths = ["services/app/tests","notifications/tests"]
pythonpath = ["services/app","notifications"]
norecursedirs = ["services/app/lambda"]