[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["jalvespinto <jalvespinto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
dependency-injector = "^4.41.0"
attrs = "^23.2.0"
cattrs = "^23.2.3"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.9"
Unidecode = "^1.3.8"
asyncpg = "^0.29.0"
aio-pika = "^9.4.0"
yarl = "^1.9.4"
anyio = "^4.0.0"
colorlog = "^6.8.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-json-logger = "^2.0.7"
email-validator = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
firebase-admin = "^6.6.0"
alembic = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "integration: integration tests",
  "e2e: end to end tests",
]
testpaths = ["tests"]
pythonpath = ["."]