[project]
name = "menu-planning"
version = "0.1.0"
description = ""
authors = [
    {name = "jalvespinto",email = "jalvespinto@gmail.com"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "dependency-injector (>=4.41.0)",
    "attrs (>=25.1.0)",
    "cattrs (>=24.1.2)",
    "python-dotenv (>=1.0.0)",
    "python-multipart (>=0.0.9)",
    "Unidecode (>=1.3.8)",
    "asyncpg (>=0.29.0)",
    "yarl (>=1.9.4)",
    "anyio (>=4.0.0)",
    "colorlog (>=6.8.0)",
    "sqlalchemy (>=2.0.25)",
    "pydantic (>=2.5.2)",
    "pydantic-settings (>=2.1.0)",
    "python-json-logger (>=3.2.1)",
    "email-validator (>=2.2.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
alembic = "^1.14.1"
click = "^8.1.8"
tenacity = "^9.0.0"
pytest-cov = "^6.1.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "integration: integration tests",
  "e2e: end to end tests",
]
testpaths = ["tests"]
pythonpath = ["."]