[project]
name = "menu-planning"
version = "0.1.0"
description = ""
authors = [
    {name = "jalvespinto",email = "jalvespinto@gmail.com"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "dependency-injector (>=4.41.0)",
    "attrs (>=25.1.0)",
    "cattrs (>=24.1.2)",
    "python-dotenv (>=1.0.0)",
    "python-multipart (>=0.0.9)",
    "Unidecode (>=1.3.8)",
    "asyncpg (>=0.29.0)",
    "yarl (>=1.9.4)",
    "anyio (>=4.0.0)",
    "colorlog (>=6.8.0)",
    "sqlalchemy (>=2.0.25)",
    "pydantic (>=2.5.2)",
    "pydantic-settings (>=2.1.0)",
    "python-json-logger (>=3.2.1)",
    "email-validator (>=2.2.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
alembic = "^1.14.1"
click = "^8.1.8"
tenacity = "^9.0.0"
pytest-cov = "^6.1.1"
pytest-timeout = "^2.3.1"
mypy = "^1.16.1"
pytest-benchmark = "^4.0.0"
pre-commit = "^4.2.0"
typos = "^1.33.1"
ruff = "^0.12.2"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "integration: integration tests",
  "e2e: end to end tests",
  "benchmark: performance benchmarks",
]
testpaths = ["tests"]
pythonpath = ["."]
timeout = 300
timeout_method = "thread"
addopts = "--tb=short --strict-markers --strict-config"

[tool.pytest_benchmark]
min_rounds = 3
max_time = 0.005
timer = "perf_counter"
group_by = "name"
sort = "mean"
disable_gc = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*", 
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.coverage.paths]
source = ["src/", "*/site-packages/"]