[tool.poetry]
name = "notifications"
version = "0.1.0"
description = ""
authors = ["jalvespinto <jalvespinto@gmail.com>"]
packages = [
    {include = "src"},
    {include = "rabbitmq_consumers"},
]


[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
aiosmtplib = "^3.0.1"
bcrypt = "^4.1.2"
attrs = "^23.2.0"
cattrs = "^23.2.3"
Cython = "^3.0.8"
email-validator = "^2.1.0.post1"
passlib = "^1.7.4"
tenacity = "^8.2.3"
python-json-logger = "^2.0.7"
aio-pika = "^9.4.0"
anyio = "^4.0.0"
colorlog = "^6.8.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
wheel = "^0.42.0"
requests = "^2.31.0"
httpx = "^0.26.0"
pytest = "^8.1.1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: integration tests",
  "e2e: end to end tests",
]