[tool.poetry]
name = "receipt_scrapers"
version = "0.1.0"
description = ""
authors = ["jalvespinto <jalvespinto@gmail.com>"]
packages = [
    {include = "src"},
    {include = "rabbitmq_consumers"},
]

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.2.0"
Cython = "^3.0.8"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
Unidecode = "^1.3.8"
python-Levenshtein = "^0.23.0"
python-json-logger = "^2.0.7"
aio-pika = "^9.4.0"
anyio = "^4.0.0"
colorlog = "^6.8.0"
apscheduler = "^3.10.4"
pydantic-settings = "^2.1.0"
beautifulsoup4 = "^4.12.2"
anticaptchaofficial = "^1.0.58"
pyOpenSSL = "23.3.0"
selenium = "^4.15.2"
cryptography = "^41.0.5"
playwright = "^1.40.0"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
wheel = "^0.42.0"
requests = "^2.31.0"
httpx = "^0.26.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"